--- a/Frontend/Backoffice/Adaptado/index.html
+++ b/Frontend/Backoffice/Adaptado/index.html
@@ -339,7 +339,7 @@
                 <!-- small box -->
                 <div class="small-box bg-info">
                   <div class="inner">
-                    <h3 id="n-ati-ati" value="test">150</h3>
+                    <h3 id="n-ati-ati" value="test">10</h3>
 
                     <p>Atividades ativas</p>
                   </div>
@@ -361,7 +361,7 @@
                 <!-- small box -->
                 <div class="small-box bg-success">
                   <div class="inner">
-                    <h3>53</h3>
+                    <h3>3</h3>
 
                     <p>Atividades planeadas</p>
                   </div>
@@ -383,7 +383,7 @@
                 <!-- small box -->
                 <div class="small-box bg-warning">
                   <div class="inner">
-                    <h3>44</h3>
+                    <h3>3</h3>
 
                     <p>Atividades realizadas</p>
                   </div>
@@ -402,7 +402,7 @@
                 <!-- small box -->
                 <div class="small-box bg-danger">
                   <div class="inner">
-                    <h3 id="n-tot-ati" value="test"></h3>
+                    <h3 id="n-tot-ati" value="test">0</h3>
 
                     <p>Total de atividades</p>
                   </div>
@@ -421,15 +421,8 @@
                   ></span>
 
                   <div class="info-box-content">
-                    <span class="info-box-text">Partilhas</span>
-                    <span class="info-box-number">492</span>
-
-                    <div class="progress">
-                      <div class="progress-bar" style="width: 70%"></div>
-                    </div>
-                    <span class="progress-description">
-                      70% aumento em 30 Dias
-                    </span>
+                    <span class="info-box-text">Parceiros</span> 
+                    <span class="info-box-number" id="n-parceiros" value="test"></span>
                   </div>
                   <!-- /.info-box-content -->
                 </div>
@@ -443,15 +436,8 @@
                   ></span>
 
                   <div class="info-box-content">
-                    <span class="info-box-text">Gostos</span>
-                    <span class="info-box-number">1,359</span>
-
-                    <div class="progress">
-                      <div class="progress-bar" style="width: 70%"></div>
-                    </div>
-                    <span class="progress-description">
-                      70% aumento em 30 Dias
-                    </span>
+                    <span class="info-box-text">Atividades bem-sucedidas</span>
+                    <span class="info-box-number" id="n-sucedidas" value="test"></span>
                   </div>
                   <!-- /.info-box-content -->
                 </div>
@@ -465,15 +451,8 @@
                   ></span>
 
                   <div class="info-box-content">
-                    <span class="info-box-text">Utilizadores ativos</span>
-                    <span class="info-box-number">5,291</span>
-
-                    <div class="progress">
-                      <div class="progress-bar" style="width: 70%"></div>
-                    </div>
-                    <span class="progress-description">
-                      70% aumento em 30 Dias
-                    </span>
+                    <span class="info-box-text">Utilizadores registado</span>
+                    <span class="info-box-number" id="n-registados" value="test"></span>
                   </div>
                   <!-- /.info-box-content -->
                 </div>
@@ -490,12 +469,6 @@
                     <span class="info-box-text">Sugestões</span>
                     <span class="info-box-number" id="n-sugestoes" value="test"></span>
 
-                    <div class="progress">
-                      <div class="progress-bar" style="width: 70%"></div>
-                    </div>
-                    <span class="progress-description">
-                      70% aumento em 30 Dias
-                    </span>
                   </div>
                   <!-- /.info-box-content -->
                 </div>
@@ -621,7 +594,7 @@
                 <div class="timeline">
                   <!-- timeline time label -->
                   <div class="time-label">
-                    <span class="bg-red">10 Feb. 2021</span>
+                    <span class="bg-red">14 Mai. 2021</span>
                   </div>
                   <!-- /.timeline-label -->
                   <!-- timeline item -->
@@ -629,18 +602,14 @@
                     <i class="fas fa-envelope bg-blue"></i>
                     <div class="timeline-item">
                       <span class="time"
-                        ><i class="fas fa-clock"></i> 12:05</span
+                        ><i class="fas fa-clock"></i> 14:05</span
                       >
                       <h3 class="timeline-header">
                         <a href="#">Equipa ProChild</a> enviou-lhe um email
                       </h3>
 
                       <div class="timeline-body">
-                        Etsy doostang zoodles disqus groupon greplin oooj voxy
-                        zoodles, weebly ning heekya handango imeem plugg dopplr
-                        jibjab, movity jajah plickers sifteo edmodo ifttt
-                        zimbra. Babblely odeo kaboodle quora plaxo ideeli hulu
-                        weebly balihoo...
+                        Boa tarde instituição, </br> Acabou recentemente uma atividade da qual fazia parte. Esperamos que tenha corrido tudo pelo melhor e que tenha conseguido atingir os seus objetivos com a mesma. </br> No seguimento do programa Cidade Amiga Das Crianças, envia-mos um modelo de avaliação sobre a atividade que findou para posterior análise. Para responder ao questionário tem de pressionar o botão abaixo. Basta responder uma unica vez por atividade. </br> </br>Sorrisos e até breve!
                       </div>
                       <div class="timeline-footer">
                         <a
@@ -667,11 +636,10 @@
                       </h3>
 
                       <div class="timeline-body">
-                        Etsy doostang zoodles disqus groupon greplin oooj voxy
-                        zoodles, weebly ning heekya handango imeem plugg dopplr
-                        jibjab, movity jajah plickers sifteo edmodo ifttt
-                        zimbra. Babblely odeo kaboodle quora plaxo ideeli hulu
-                        weebly balihoo...
+                        Boa tarde instituição, </br> Esperamos que as atividades que realiza ou faz parte estejam a correr pelo melhor e que tenha 
+                        conseguido atingir os seus objetivos com as mesma. </br> No seguimento do programa Cidade Amiga Das Crianças, envia-mos um modelo de avaliação 
+                        sobre o programa como um todo para posterior análise. Para responder ao questionário tem de pressionar o botão abaixo. Basta responder uma unica 
+                        vez por atividade. </br> </br>Sorrisos e até breve!
                       </div>
                       <div class="timeline-footer">
                         <a
@@ -690,18 +658,16 @@
                     <i class="fas fa-envelope bg-blue"></i>
                     <div class="timeline-item">
                       <span class="time"
-                        ><i class="fas fa-clock"></i> 13:20</span
+                        ><i class="fas fa-clock"></i> 09:20</span
                       >
                       <h3 class="timeline-header">
                         <a href="#">Equipa ProChild</a> enviou-lhe um email
                       </h3>
 
                       <div class="timeline-body">
-                        Etsy doostang zoodles disqus groupon greplin oooj voxy
-                        zoodles, weebly ning heekya handango imeem plugg dopplr
-                        jibjab, movity jajah plickers sifteo edmodo ifttt
-                        zimbra. Babblely odeo kaboodle quora plaxo ideeli hulu
-                        weebly balihoo...
+                        Boa tarde instituição, </br> Esta a decorrer uma atividade da qual faz parte. Esperamos que esteja tudo a correr pelo melhor e que esteja a conseguir 
+                        atingir os seus objetivos com a mesma. </br> No seguimento do programa Cidade Amiga Das Crianças, envia-mos um modelo de avaliação sobre a atividade 
+                        que está a decorrer para posterior análise. Para responder ao questionário tem de pressionar o botão abaixo. Basta responder uma unica vez por atividade. </br> </br>Sorrisos e até breve!
                       </div>
                       <div class="timeline-footer">
                         <a
@@ -716,7 +682,7 @@
                   </div>
                   <!-- END timeline item -->
                   <!-- timeline item -->
-                  <div>
+                  <!-- <div>
                     <i class="fas fa-user bg-green"></i>
                     <div class="timeline-item">
                       <span class="time"
@@ -726,14 +692,14 @@
                         <a href="#">Sarah Young</a> accepted your friend request
                       </h3>
                     </div>
-                  </div>
+                  </div> -->
                   <!-- END timeline item -->
                   <!-- timeline item -->
                   <div>
                     <i class="fas fa-comments bg-yellow"></i>
                     <div class="timeline-item">
                       <span class="time"
-                        ><i class="fas fa-clock"></i> 27 mins ago</span
+                        ><i class="fas fa-clock"></i> 08:38</span
                       >
                       <h3 class="timeline-header">
                         <a href="#">António Pimentel</a> enviou-lhe uma
@@ -755,7 +721,7 @@
                   <!-- END timeline item -->
                   <!-- timeline time label -->
                   <div class="time-label">
-                    <span class="bg-green">3 Jan. 2014</span>
+                    <span class="bg-green">13 Mai. 2021</span>
                   </div>
                   <!-- /.timeline-label -->
                   <!-- timeline item -->
@@ -763,7 +729,7 @@
                     <i class="fa fa-camera bg-purple"></i>
                     <div class="timeline-item">
                       <span class="time"
-                        ><i class="fas fa-clock"></i> 2 days ago</span
+                        ><i class="fas fa-clock"></i> 1 dia atrás</span
                       >
                       <h3 class="timeline-header">
                         <a href="#">Support</a> carregou novas fotos para uma
@@ -788,11 +754,11 @@
 
                     <div class="timeline-item">
                       <span class="time"
-                        ><i class="fas fa-clock"></i> 5 days ago</span
+                        ><i class="fas fa-clock"></i> 1 dia atrás</span
                       >
 
                       <h3 class="timeline-header">
-                        <a href="#">Mr. Doe</a> shared a video
+                        <a href="#">C.M. Guimarães</a> partilhou um video
                       </h3>
                       <!-- <div class="timeline-body">
                         <div class="embed-responsive embed-responsive-16by9">
@@ -806,7 +772,7 @@
 
                       <div class="timeline-footer">
                         <a href="#" class="btn btn-sm bg-maroon"
-                          >See comments</a
+                          >Ver mais</a
                         >
                       </div>
                     </div>
@@ -1216,7 +1182,7 @@
     <script src="dist/js/pages/dashboard2.js"></script>
     <!-- Controllers -->
     <script src="/Frontend/Backoffice/Adaptado/controllers/controller_dashboard.js"></script>
-    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_menuLateral.js"></script>
+    <!-- <script src="/Frontend/Backoffice/Adaptado/controllers/controller_menuLateral.js"></script> -->
     <script src="/Frontend/Backoffice/Adaptado/controllers/controller_logout.js"></script>
     <script>
       $(function () {
@@ -1262,7 +1228,7 @@
         const activities12 = await response.json();
         for(const activity of activities12){
           strHtml+= `<option name="${activity.id_activity}" value="${activity.id_activity}"> ${activity.name}</option>`
-          console.log("activity:" + activity.name)
+          // console.log("activity:" + activity.name)
         }
         ents.innerHTML=strHtml;
       })();
@@ -1274,7 +1240,7 @@
         const activities14 = await response.json();
         for(const activity of activities14){
           strHtml+= `<option value="${activity.id_activity}"> ${activity.name}</option>`
-          console.log("activity:" + activity.name)
+          // console.log("activity:" + activity.name)
         }
         ents.innerHTML=strHtml;
       })();
