--- a/Frontend/Backoffice/Adaptado/pages/examples/profile.html
+++ b/Frontend/Backoffice/Adaptado/pages/examples/profile.html
@@ -489,7 +489,7 @@
     <script src="../../dist/js/demo.js"></script>
     <!-- Controllers -->
     <script src="/Frontend/Backoffice/Adaptado/controllers/controller_perfil.js"></script>
-    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_menuLateral.js"></script>
+    <!-- <script src="/Frontend/Backoffice/Adaptado/controllers/controller_menuLateral.js"></script> -->
 
     <script>
       function verPass() {
