--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -107,7 +107,7 @@
           <div class="modal-body">
             
             <!-- <form action="/Frontend/Backoffice/Adaptado/index.html"> -->
-              <form action="http://localhost:8080/DAI_backend/login1"  method ="POST" class="form">
+              <form action="http://localhost:8080/DAI_backend/login"  method ="POST" class="form">
               <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" name="email" placeholder="email" id="email" />
@@ -543,7 +543,33 @@
         </div>
       </section><!-- #portfolio -->
 
-
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <section id="skills">
         <div class="container">
   
