--- a/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html
+++ b/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AdminLTE 3 | Calendar</title>
+    <title>Cidade amiga</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link
@@ -260,10 +260,18 @@
                     <div class="card-header">
                       <h4 class="card-title">Atividades</h4>
                     </div>
-                    <div class="card-body">
+                    <div
+                      class="card-body"
+                      style="
+                        width: 100%;
+                        height: 30rem;
+                        overflow-y: auto;
+                        overflow-x: hidden;
+                      "
+                    >
                       <!-- the events -->
                       <div id="external-events">
-                        <div
+                        <!-- <div
                           class="external-event bg-success"
                           data-toggle="modal"
                           data-target="#MaisInfo"
@@ -297,7 +305,8 @@
                           data-target="#MaisInfo"
                         >
                           Sleep tight
-                        </div>
+                        </div> -->
+                        <div id="PostWrapper"></div>
                       </div>
                     </div>
                     <!-- /.card-body -->
@@ -347,27 +356,28 @@
                     <input
                       type="text"
                       class="form-control"
-                      id="inputEmail4"
+                      id="nomeDaAtividade"
+                      value=""
                       readonly
                     />
                   </div>
                   <div class="form-group col-md-4">
-                    <label for="inputPassword4">Local</label>
+                    <label for="inputPassword4">Cidade</label>
                     <input
                       type="text"
                       class="form-control"
-                      id="inputPassword4"
+                      id="cidadeDaAtividade"
                       readonly
                     />
                   </div>
                 </div>
                 <div class="form-row">
                   <div class="form-group col-md-6">
-                    <label for="inputEmail4">Data de inicio</label>
+                    <label for="diDaAtividade">Data de inicio</label>
                     <input
                       type="text"
                       class="form-control"
-                      id="inputEmail4"
+                      id="diDaAtividade"
                       readonly
                     />
                   </div>
@@ -376,16 +386,16 @@
                     <input
                       type="text"
                       class="form-control"
-                      id="inputPassword4"
+                      id="dfDaAtividade"
                       readonly
                     />
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Descrição</label>
+                  <label for="dDaAtividade">Descrição</label>
                   <textarea
                     class="form-control"
-                    id="exampleFormControlTextarea1"
+                    id="dDaAtividade"
                     rows="3"
                     style="resize: none"
                     readonly
@@ -459,6 +469,8 @@
     <script src="../dist/js/demo.js"></script>
     <!-- Select2 -->
     <script src="/Frontend/Backoffice/Adaptado/plugins/select2/js/select2.full.min.js"></script>
+    <!-- Controller -->
+    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_calendarioCamara.js"></script>
     <!-- Page specific script -->
     <script>
       $(function () {
@@ -643,8 +655,7 @@
             class: "bg-success",
             title: "Atividade divulgada",
             subtitle: "Registado",
-            body:
-              "A atividade em questão aparece agora nas recomendações, na aplcação.",
+            body: "A atividade em questão aparece agora nas recomendações, na aplcação.",
           });
         });
       });
