atualizacoes ate sedutubal

--- a/Frontend/Backoffice/Adaptado/index.html
+++ b/Frontend/Backoffice/Adaptado/index.html
@@ -739,11 +739,11 @@
                         Acabou de adicionar à galeria da atividade as seguintes
                         fotos:
                         <br />
-                        <img src="https://placehold.it/150x100" alt="..." />
-                        <img src="https://placehold.it/150x100" alt="..." />
-                        <img src="https://placehold.it/150x100" alt="..." />
-                        <img src="https://placehold.it/150x100" alt="..." />
-                        <img src="https://placehold.it/150x100" alt="..." />
+                        <img src="/Frontend/Backoffice/Adaptado/dist/img/atividades-para-ensinar-matematica.jpg" style="height: 10%; width: 10%;" alt="..." />
+                        <img src="/Frontend/Backoffice/Adaptado/dist/img/unnamed (1).jpg" style="height: 10%; width: 7%;" alt="..." />
+                        <img src="/Frontend/Backoffice/Adaptado/dist/img/o-animador-pinta-o-rosto-da-crianca_94132-647.jpg" style="height: 10%; width: 8%;" alt="..." />
+                        <img src="/Frontend/Backoffice/Adaptado/dist/img/de15003db654e9a3c16f8f49622fba26.jpg" style="height: 10%; width: 8%;" alt="..." />
+                        <img src="/Frontend/Backoffice/Adaptado/dist/img/depositphotos_21541201-stock-photo-child-playing-tennis.jpg" style="height: 10%; width: 8%;" alt="..." />
                       </div>
                     </div>
                   </div>
