--- a/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
+++ b/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
@@ -852,21 +852,21 @@
                             <div class="carousel-item active">
                               <img
                                 class="d-block w-100"
-                                src="/Frontend/Backoffice/Adaptado/dist/img/avatar3.png"
+                                src="/Frontend/Backoffice/Adaptado/dist/img/images.jpg"
                                 alt="First slide"
                               />
                             </div>
                             <div class="carousel-item">
                               <img
                                 class="d-block w-100"
-                                src="/Frontend/Backoffice/Adaptado/dist/img/avatar2.png"
+                                src="/Frontend/Backoffice/Adaptado/dist/img/thinkstockphotos-944585218.jpg"
                                 alt="Second slide"
                               />
                             </div>
                             <div class="carousel-item">
                               <img
                                 class="d-block w-100"
-                                src="/Frontend/Backoffice/Adaptado/dist/img/avatar5.png"
+                                src="/Frontend/Backoffice/Adaptado/dist/img/images (1).jpg"
                                 alt="Third slide"
                               />
                             </div>
